--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
+
+
+# Spring Security default credentials
+spring.security.user.name=admin
+spring.security.user.password=123
+
+#monitor.remote.hosts=152.67.4.72,sharp1.shmpl.com
+monitor.remote.hosts=localhost
+
+monitor.remote.user=ubuntu
+monitor.remote.key-path=/home/prashant/.ssh/id_rsa
