--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.55</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
